<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="task_title">Task Title</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="selecionar_data">Selecionar data</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="detalhes">Detalhes</string>
</resources>